--- a/app.json
+++ b/app.json
@@ -10,8 +10,8 @@
         "renamer"
     ],
 
-    "repository": "https://github.com/Ns-AnoNymouS/Renamer",
-    "stack": "heroku-20",
+    "repository": "https://github.com/Abhyudak/Renamer",
+    "stack": "heroku-22",
     "website": "https://t.me/Ns_bot_updates",
     "success_url": "https://t.me/RenamerNs_bot",
 
